Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/8153884/T8153884.out
T8153884.java:10:32: compiler.err.prob.found.req: (compiler.misc.stat.expr.expected)
1 error
